--- a/cke_placeholder.links.menu.yml
+++ b/cke_placeholder.links.menu.yml
@@ -1,5 +1,5 @@
 cke_placeholder.cke_placeholder_settings:
   route_name: cke_placeholder.cke_placeholder_settings
-  title: 'Administer media file settings'
+  title: 'Administer CKE Placeholder settings'
   description: 'Configure allowed file extensions'
   parent: system.admin_config_content
