DFINYT-13 add the new plugin for Cke Placeholder library

--- a/cke_placeholder.services.yml
+++ b/cke_placeholder.services.yml
@@ -2,7 +2,10 @@ services:
   plugin.manager.cke_placeholder.plugin:
     class: Drupal\cke_placeholder\CKEPlaceholder
     parent: default_plugin_manager
-services:
   plugin.manager.cke_link_text.plugin:
     class: Drupal\cke_placeholder\CKELinkText
-    parent: default_plugin_manager    
+    parent: default_plugin_manager
+  plugin.manager.cke_placeholder_library:
+    class: Drupal\cke_placeholder\CkePlaceholderLibraryPluginManager
+    parent: default_plugin_manager
+  
