--- a/cke_placeholder.services.yml
+++ b/cke_placeholder.services.yml
@@ -8,4 +8,7 @@ services:
   plugin.manager.cke_placeholder_library:
     class: Drupal\cke_placeholder\CkePlaceholderLibraryPluginManager
     parent: default_plugin_manager
+  plugin.manager.cke_placeholder_tags:
+    class: Drupal\cke_placeholder\CkePlaceholderTagsPluginManager
+    parent: default_plugin_manager  
   
