Fixed appearance of panes.

--- a/cke_placeholder.libraries.yml
+++ b/cke_placeholder.libraries.yml
@@ -1,7 +1,7 @@
 cke_placeholder_forms:
   version: 1.x
   js:
-    js/cke_placeholder_forms.js: {}
+    js/cke_placeholder_form.js: {}
     assets/cke_placeholder_form_library.js: {}
     assets/cke_placeholder_object.js: {}
   css:
@@ -9,4 +9,10 @@ cke_placeholder_forms:
         assets/cke_placeholder_form.css: {}
   dependencies:
     - core/jquery
+    - core/jquery.once
     - core/drupalSettings
+
+editor_plugin:
+  version: 1.x
+  js:
+    js/cke_placeholder_form.js: {}
